# vcelery-task-runner

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
main/: asgi.py  settings.py  test_settings.py  urls.py
vcelerydev/: README.md  __init__.py  apps.py  celery.py  tasks.py
vcelerydev/models/: payment.py
vcelerydev/templates/registration/: login.html
vcelerytaskrunner/: admin.py  apps.py  models.py  views.py
vcelerytaskrunner/migrations/: 0001_initial.py
vcelerytaskrunner/services/: task_registry.py  task_runner.py
vcelerytaskrunner/static/app/: tasks.css
vcelerytaskrunner/templates/vcelerytaskrunner/: layout.html  task_run.html  task_run_result.html  tasks.html
vcelerytaskrunner/tests/views/: test_task_runs.py  test_tasks_api_view.py
