[build-system]
requires = ['setuptools>=40.8.0', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = "vcelery-task-runner"
version = "1.1.0"
description = "UI to allow interactively starting Celery tasks"
readme = "README.md"
authors = [{ name = "Van Ly", email = "vancly@hotmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["celery", "python", "django"]
dependencies = [
    "django >= 4.2.16",
    "celery >= 5.3.6",
    "djangorestframework >= 3.15.2",
    "pydantic >= 2.10.1"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["vcelerytaskrunner*"]  # ["*"] by default

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/bluedenim/vcelery-task-runner"

[project.scripts]
